# Text-to-Speech-App

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  tts.py
.claude/skills/narrate/: SKILL.md
